# caatingarobotics

./: CHANGELOG.md  README.md
.github/workflows/: ci-ros2.yml  repo-hygiene.yml
src/agro_robot_sim/: CMakeLists.txt  ament_flake8.ini  package.xml  readme.md
src/agro_robot_sim/config/: nav2_speed.yaml  ros_gz_bridge.yaml
src/agro_robot_sim/launch/: fazenda_completa.launch.py  gravador_rotas.py  missao_fazenda.py  nav.launch.py  navigation.launch.py  sim.launch.py  sim_nav.launch.py  start_mapping.launch.py
src/agro_robot_sim/maps/: sowbot_test_map.yaml
src/agro_robot_sim/urdf/: agro_robot.urdf.xacro  robo_caatinga.urdf.xacro  sowbot_01.xacro
src/agro_robot_sim/worlds/: empty.sdf  minha_fazenda.sdf
src/caatinga_nav/: CMakeLists.txt  package.xml
src/caatinga_nav/config/: fusion_config.yaml  gps_ekf.yaml  mapper_params_online_async.yaml  nav2_speed.yaml
src/caatinga_nav/launch/: navigation.launch.py  online_async_launch.py  start_mapping.launch.py
src/caatinga_nav/maps/: meu_mapa.pgm  meu_mapa.yaml  novo_mapa_fazenda.pgm  novo_mapa_fazenda.yaml
src/caatinga_nav/scripts/: gravador_rotas.py  ir_garagem.py  leitor_rotas.py  mapa_robo.html  painel_controle.py  rastreabilidade_ue.py  salvar_garagem.py
src/caatinga_nav/scripts/rotas_de_trabalho/: teste1.csv
src/caatinga_nav/urdf/: robo_caatinga.urdf.xacro
src/caatinga_vision/: package.xml  readme.md  setup.py
src/sowbot_row_follow/: README.md  package.xml  setup.cfg  setup.py  triangle_scan.py
src/sowbot_row_follow/config/: crop_row_params.yaml
src/sowbot_row_follow/launch/: crop_row_nav.launch.py  row_follow.launch.py
src/sowbot_row_follow/sowbot_row_follow/: crop_row_node.py  limbic_row_follow_node.py  row_discovery_node.py  triangle_scan.py
src/sowbot_row_follow/test/: test_triangle_scan.py
