<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sowbot_row_follow</name>
  <version>0.1.0</version>
  <description>
    Monocular RGB crop-row following for Sowbot.
    Derived from visual-multi-crop-row-navigation (Agricultural-Robotics-Bonn, BSD-2).
    Publishes lateral offset and heading error on /aoc/conditions/* for the AOC navigation layer,
    plus a perception heartbeat on /aoc/heartbeat/neo_vision (M10).
  </description>

  <maintainer email="sam@agroecologylab.com">Agroecology Lab Ltd</maintainer>

  <license>BSD-2-Clause</license>

  <url type="repository">https://github.com/samuk/caatingarobotics</url>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
